# agroinsight-backend

./: .cursorignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  railway.build.sh
about/: index.html
app/: main.py
app/core/: exceptions_handler.py
complement-docs/overview/: index.html
costs/endpoints/: index.html
costs/models/: index.html
costs/overview/: index.html
costs/use_cases/: index.html
crop/endpoints/: index.html
crop/models/: index.html
crop/overview/: index.html
crop/use_cases/: index.html
cultural_practices/endpoints/: index.html
cultural_practices/models/: index.html
cultural_practices/overview/: index.html
cultural_practices/use_cases/: index.html
development/coding_standards/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: about.md  index.md
docs/complement-docs/: overview.md
docs/costs/: endpoints.md  models.md  overview.md  use_cases.md
docs/crop/: endpoints.md  models.md  overview.md  use_cases.md
docs/cultural_practices/: endpoints.md  models.md  overview.md  use_cases.md
docs/development/: coding_standards.md  contributing.md  testing.md
docs/fall_armyworm/: endpoints.md  models.md  overview.md  use_cases.md
docs/farm/: endpoints.md  models.md  overview.md  use_cases.md
docs/guides/: faq.md  getting_started.md  installation.md
docs/measurement/: endpoints.md  models.md  overview.md  use_cases.md
docs/plot/: endpoints.md  models.md  overview.md  use_cases.md
docs/reports/: endpoints.md  financial.md  models.md  overview.md  use_cases.md
docs/soil_analysis/: endpoints.md  models.md  overview.md  use_cases.md
docs/user/: endpoints.md  models.md  overview.md  repository.md  schemas.md  use_cases.md
docs/weather/: endpoints.md  models.md  overview.md  use_cases.md
fall_armyworm/endpoints/: index.html
farm/endpoints/: index.html
search/: search_index.json
site/: 404.html  objects.inv
(+265 files in other folders)
