[tool.poetry]
name = "agroinsight-backend"
version = "0.1.0"
description = ""
authors = ["DavidValencia526 <davidvalencia0526@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
requests = "^2.32.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"
tensorflow = "2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
