[tool.poetry]
name = "agroinsight-backend"
version = "0.1.0"
description = ""
authors = ["DavidValencia526 <davidvalencia0526@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.8.2"}
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
requests = "^2.32.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"
tensorflow = "2.16.1"
databases = "^0.9.0"
aiomysql = "^0.2.0"
python-dotenv = "^1.0.1"
cryptography = "^43.0.0"
bcrypt = "3.2.0"
resend = "^2.4.0"
apscheduler = "^3.10.4"
sendgrid = "^6.11.0"
mailersend = "^0.5.8"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
aiopg = "^1.4.0"
psycopg2-binary = "^2.9.9"
aiosmtplib = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
